Prod V2/main/default/objects/OpportunityLineItem/fields/CNK__c.field-meta.xml
<CustomField>
    <fullName>CNK__c</fullName>
    <formula>PricebookEntry.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNK</label>
    <type>Text</type>
</CustomField>