Prod V2/main/default/objects/OpportunityLineItem/fields/Opportunity_Package__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>technical field used in the creation of orders when the opportunity is won</description>
    <label>Opportunity Package</label>
    <referenceTo>Opportunity_Package__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>